--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "react-router-dom": "^6.26.2",
     "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
+    "resend": "^4.6.0",
+    "shadcn-ui": "^0.9.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
