Simplify email preferences: remove all options except weekly newsletter
- Remove all email notification options except weekly newsletter
- Make weekly newsletter automatically enabled for new users
- Remove day/time selection - use fixed Sunday 9:00 AM schedule
- Update UI to show only newsletter toggle and info text
- Update database functions to use simplified structure
- Remove red-bordered title from newsletter info section

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -21,7 +21,7 @@ enabled = false  # Disabled as functionality moved to database triggers
 [functions.slack]
 verify_jwt = false
 
-[functions.send-weekly-summary]
+[functions.send-weekly-summary-final]
 verify_jwt = true
 
 [functions.schedule-weekly-digests]
