Deactivate automated newsletter sending
- Disable GitHub Actions scheduled workflow
- Add migration to unschedule Supabase cron job
- Newsletter can still be manually triggered

--- a/.github/workflows/weekly-newsletter.yml
+++ b/.github/workflows/weekly-newsletter.yml
@@ -1,10 +1,11 @@
 name: Weekly Newsletter Scheduler
 
 on:
-  schedule:
-    # Run every hour on Sundays to catch different timezones
-    # This ensures we hit the 9 AM window for each neighborhood's timezone
-    - cron: '0 * * * 0'  # Every hour on Sunday
+  # SCHEDULE DISABLED - Newsletter deactivated
+  # schedule:
+  #   # Run every hour on Sundays to catch different timezones
+  #   # This ensures we hit the 9 AM window for each neighborhood's timezone
+  #   - cron: '0 * * * 0'  # Every hour on Sunday
   workflow_dispatch:  # Allow manual triggering for testing
 
 jobs:
